<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Menu_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:contentDescription="@string/menu_card_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/aces" />

            <TextView
                android:id="@+id/menuTitle_LBL_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/menu_title"
                android:textColor="@color/menuTitle"
                android:textSize="60sp" />

            <ImageView
                android:contentDescription="@string/menu_card_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/aces" />
        </LinearLayout>

        <Button
            android:id="@+id/startGame_BTN_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_start"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/menuButtons"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/scoreboard_BTN_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard_start"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/menuButtons"
            android:textColor="@color/black"/>

    </LinearLayout>


</RelativeLayout>